Builder for Alerts added. Depcreated methods updated